Added new status filter and updated translations

--- a/common/src/locales/bari.json
+++ b/common/src/locales/bari.json
@@ -17,12 +17,12 @@
     "requestTimeout": "Ngo na molo na di;ngit na anyu 'dungoddu.",
     "changePassword": "Gayere gayer ngayet lo",
     "changePasswordFor": "Gayere gayer ngayet lo- Karin ti katokitayinit lo) ID-Gbuluwet) Users ID-Gbuluwet na monye tokitaju",
-    "passwordChangeConfirmation": "ngaeet na a gaero 'bura",
+    "passwordChangeConfirmation": "Ngaeet na a gaero 'bura",
     "cantLoadUserWithID": "Katokitayinit lo nyobulo suki' ko ID {{userID}}",
-    "alreadyConnectedToServer": "a nyu' tokoki' yi ngo lo wuwuju lo",
-    "notConnectedToInternet": "turu'buti lelut lo 'ba tokoki' yi ngo' lo wuwuju lo",
-    "mustHaveInternet": "ti do gbe gbong ko boyi na tokuwa ko lo WI-FI anyen bubulo ngarju ngo lo wuwuju kulo",
-    "switchClearData": "ngarju na ngo' lo wuwuju kulo sisiyara' data nagong do gbong ko se kune.Do gbak mimindi tu ngerot?",
+    "alreadyConnectedToServer": "A nyu' tokoki' yi ngo lo wuwuju lo:",
+    "notConnectedToInternet": "Turu'buti lelut lo 'ba tokoki' yi ngo' lo wuwuju lo",
+    "mustHaveInternet": "Ti do gbe gbong ko boyi na tokuwa ko lo WI-FI anyen bubulo ngarju ngo lo wuwuju kulo",
+    "switchClearData": "Ngarju na ngo' lo wuwuju kulo sisiyara' data nagong do gbong ko se kune.Do gbak mimindi tu ngerot?",
     "live": "Gbong jorun kode' gbolong",
     "test": "Temba, teme,",
     "noConnection": "A 'buwon tokuwa , tokuwet na 'bayin",
@@ -32,19 +32,19 @@
     "selectServer": "Wulundi' ngo lo wuwuju lo",
     "testServerURL": "Teme tem ngo lo wuwuju logwon a URL",
     "switchServers": "Ngarji ngo' lo wuwuju kulo",
-    "liveServer": "ngo lo wuwuju logwon jorun",
+    "liveServer": "Ngo lo wuwuju logwon jorun",
     "testServer": "Teme tem ngo lo wuwuju",
     "noInternet": "Boyi na 'ban na pupuru'",
     "unableToReachServer": "Nyobulo yenga yi ngo' lo wuwuju lo"
   },
   "dashboard": {
-    "clientListPriority": "ngutu lo nyume a ti kokuwe",
+    "clientListPriority": "Ngutu lo nyume a ti kokuwe",
     "clientListOutstandingRefs": "Lo/Na pitundo/ logwon 'ba tutungo lo sonyo",
     "emptyInbox": "Su'de 'delet lo gbon kana",
-    "myClients": "ngutuu logo;n na medda se kulo",
-    "allClients": "ngutt ling lo memeta",
+    "myClients": "Ngutuu logo;n na medda se kulo",
+    "allClients": "Ngutt ling lo memeta",
     "showArchived": "Kpene kulya / payil logbon  'dela pajopajo'",
-    "noVisits": "yolisi' 'ban",
+    "noVisits": "Yolisi' 'ban",
     "noClients": "&No Clients Found",
     "noOutstandingReferrals": "&No Outstanding Referrals Found",
     "newInboxMessages": "&You have <1>1</1> new message in your inbox",
@@ -55,12 +55,12 @@
   "disabilities": {
     "amputee": "Lo 'dungo",
     "polio": "Woji/ Raga'ba",
-    "spinalCordInjury": "pebga/ bongoji'  na  lokirgbigbi'",
+    "spinalCordInjury": "Pebga/ bongoji'  na  lokirgbigbi'",
     "cerebralPalsy": "&Cerebral Palsy",
     "spinaBifida": "&Spina Bifida",
     "hydrocephalus": "&Hydrocephalus",
     "congenitalAbnormality": "Dwayesi' / bateesi' na yungeni to",
-    "paralysisCases": "kulya/ kepesi' likun na mugun",
+    "paralysisCases": "Kulya/ kepesi' likun na mugun",
     "dontKnow": "A denda/ 'ba den",
     "other": "Lele' / nene'"
   },
@@ -71,7 +71,7 @@
     "visitsRefsSurveys": "Yolesi, sonyesi' ngerot, ko tipet/ tibbo",
     "archivedClientAccessAlert": "Payil lo ngutu' liyo' la a 'delaji' pajo'. Bong a duma' lo nye logo;n bubulo nyokundo na ngutt lo bot",
     "clientCreated": "Payil lo ngutu'  la anyu' sulywa",
-    "newClient": "ngutuu lo  memeta lo luduk",
+    "newClient": "Ngutuu lo  memeta lo luduk",
     "editClient": "Nyoki medda/ wurjo na nutu' lo",
     "viewClient": "Titime titim ngutu logon do medda nye lo",
     "discardNew": "Panepa/ koliko ngutuu lo luduk",
@@ -101,14 +101,14 @@
   },
   "general": {
     "username": "Karin ti katokitayinit",
-    "password": "ngayet",
+    "password": "Ngayet",
     "type": "Sikili",
     "name": "Karin",
     "zone": "Gboke",
     "dashboard": "&Dashboard",
     "update": "Tokorju na ngo' na gbong yi konda na 'borik",
-    "edit": "tetenakinda 'bura'",
-    "submit": "putukindo/ potoddu",
+    "edit": "Tetenakinda 'bura'",
+    "submit": "Putukindo/ potoddu",
     "save": "De'ya / 'Dele",
     "archive": "Dele pajo'",
     "dearchive": "Nyoku nog na 'dela pajo na bot",
@@ -126,13 +126,13 @@
     "village": "Gboke",
     "close": "Nyona",
     "outcome": "Ruket,/ 'Bulit",
-    "resolve": "tutungoki, tetenaki",
+    "resolve": "Tutungoki, tetenaki",
     "wheelchair": "Si'det na jijiko",
     "physiotherapy": "Ririyo,/ Siyo/ Nota … na mugun",
     "prosthetic": "&Prosthetic",
     "orthotic": "&Orthotic",
-    "alert": "mondu jo",
-    "alerts": "tukoki' yi mondu jo",
+    "alert": "Mondu jo",
+    "alerts": "Tukoki' yi mondu jo",
     "discard": "Paju/ Ko'yu/ Gupaddu yu",
     "discardChanges": "Paji'/ Ko'yi'/ Gupaddi'  ngo' nagon do gayer na yu",
     "discardAdded": "Paji'/ Ko'yi'/ Gupaddi'  ngo' nagon do a 'yalakin kune yu",
@@ -156,9 +156,9 @@
     "disabled": "Gbe nyobulo",
     "display": "Kpene/ Kpeki",
     "retry": "Nyoki temba",
-    "objectCreated": "{{object}} Gbiya 'bura'",
-    "objectUpdated": "{{object}} Tokorju na ngo' na gbong yi konda na 'borik 'bura",
-    "noObject": "{{object}} 'Ba gbong kata/ 'Beron 'ban",
+    "objectCreated": "{{object}} gbiya 'bura'",
+    "objectUpdated": "{{object}} tokorju na ngo' na gbong yi konda na 'borik 'bura",
+    "noObject": "{{object}} 'ba gbong kata/ 'beron 'ban",
     "sync": "Tunaki yi pirit na geleng/ tomore' yi pirit nageleng",
     "reminder": "Yiyiundo/ yiyiu/ yeyene/ yeyeji'",
     "empowerment": "Yalaki na ri;nit/ kongon - Todiniki', togolo",
@@ -194,7 +194,10 @@
     "previous": "&Previous",
     "no": "&No",
     "yes": "&Yes",
-    "filter": "&filter"
+    "filter": "&filter",
+    "dataGridLabelRowsPerPage": "&Rows per page:",
+    "dataGridLabelDisplayedRows": "&{{from}}–{{to}} of {{count}}",
+    "all": "&All"
   },
   "alert": {
     "generalFailure": "Lyanget a konda 'borik",
@@ -239,7 +242,7 @@
     "passwordsMustMatch": "Ti ngayesi/ ngayet tetemakinda/ jukijukin gbogbo'",
     "searchPlaceholder": "Gale katikitayinit lo/na",
     "searchBy": "Gale ko",
-    "notApplicable": "N/A??",
+    "notApplicable": "&N/A",
     "name": "Karin",
     "selectAColumn": "Gelu",
     "discardNewUser": "&Discard this new user?",
@@ -386,16 +389,16 @@
     "wheelchair": "Si'det na jijiko",
     "wheelchairExperience": "Denda/ denet na si'det na jijiko",
     "picture": "Ngojinoti",
-    "hipWidth": "??",
+    "hipWidth": "&Hip Width",
     "wheelchairOwned": "Ngutu' lo ngangaraki lo a monye lo si'det na jijiko",
     "wheelchairRepairable": "Si'det na jijiko na ngutu' lo ngamgaraki lo bubulo tetena wa'",
     "physiotherapy": "Nota, siyo,/ Tojumuki' na mugun na yi kita 'bura'",
     "condition": "Yongit",
     "conditionOther": "Kune' yongesi'",
-    "prosthetic": "??",
-    "prostheticInjuryLocation": "??",
-    "orthotic": "??",
-    "orthoticInjuryLocation": "??",
+    "prosthetic": "&Prosthetic",
+    "prostheticInjuryLocation": "&Prosthetic Injury Location",
+    "orthotic": "&Orthotic",
+    "orthoticInjuryLocation": "&Orthotic Injury Location",
     "mental": "Yeyeesi'",
     "mentalHealth": "Kelan na Yeyeesi'",
     "mentalHealthCondition": "Yongesi' ti yeyeesi'",
@@ -406,7 +409,7 @@
     "otherDescription": "Tokoro na kita",
     "referralOther": "Lele' / Nene' sonyet/ sonyo",
     "hhaNutritionAndAgricultureProject": "Petet/ Kita na HHA na kinyojin/ Kurju",
-    "hhaNutritionAndAgricultureProjectAbbr": "HHANAP ??",
+    "hhaNutritionAndAgricultureProjectAbbr": "&HHANAP",
     "otherConditionRequired": "Kule' gbiyariji mimiinikin",
     "otherConditionAtMost100Char": "Ti mugun na gbe gbiyarijin 100",
     "mentalConditionAtMost100Char": "Ti yeyeesi' kune gbe gbiyarijin 100",
@@ -429,7 +432,7 @@
     "safeguarding": "Rurugga/ Tiju 'bura",
     "basic": "Mimiinikin parik/ a mokim",
     "intermediate": "Gbe kiden",
-    "autism": "??",
+    "autism": "&Autism",
     "dementia": "Ret/ ayan lo tikinda yeyeesi' ti ngutu' yi bobongotu/ Ret , tuwanti lo bongo",
     "experience": "Denda/ denet na si'det na jijiko",
     "ownership": "Si'det na jijiko na a na lopeng",
@@ -460,7 +463,8 @@
     "describeReferral": "&Please describe the referral",
     "selectReferralServices": "&Select referral services",
     "pending": "&Pending Referrals",
-    "filterByType": "&Filter by Referral Types"
+    "filterByType": "&Filter by Referral Types",
+    "filterByStatus": "&Filter by Status"
   },
   "risks": {
     "riskLevel": "Ngo' naron na gba da",
@@ -488,10 +492,10 @@
     "mentalChanged": "&<1>Mental health</1> risk changed to"
   },
   "riskLevelsAbbreviated": {
-    "low": "LO ??",
-    "medium": "ME ??",
-    "high": "HI ??",
-    "critical": "CR ??"
+    "low": "&LO",
+    "medium": "&ME",
+    "high": "&HI",
+    "critical": "&CR"
   },
   "survey": {
     "veryPoor": "Naron parik",
@@ -499,8 +503,8 @@
     "fine": "Na'but",
     "good": "Na'but",
     "wheelchair": "Si'det na jijiko",
-    "prosthetic": "??",
-    "orthotic": "??",
+    "prosthetic": "&Prosthetic",
+    "orthotic": "&Orthotic",
     "crutch": "Tokesi",
     "walkingStick": "Ture woriyet/ turiya woriyesi'",
     "hearingAid": "Ngo' lo ngarakinda ngutu' yi yinga",
@@ -580,8 +584,8 @@
     "advice": "Kukuwet/ kukuwesi'",
     "advocacy": "Togolet/ Ngarakinda/ toli'diyan",
     "encouragement": "Kunyaresi'/ kunyaret",
-    "orthotic": "??",
-    "prosthetic": "??",
+    "orthotic": "&Orthotic",
+    "prosthetic": "&Prosthetic",
     "referralToHealthCentre": "Sonyo na ngutuu' yi kadi na wini/ jibitaliya",
     "wheelchair": "Si'det na jijiko",
     "wheelchairRepair": "Tetenaki  si'det na jijiko",
@@ -589,13 +593,13 @@
     "referralToOtherMentalHealth": "Sonyesi'/Sonyo na ngutu' yi nene' mugun na medda tokela na yeyeesi' (kwinyit)",
     "isRequiredField": "{{field}} n nye na miinikin naa a pirit nagon",
     "whereVisit": "Yolit na gbon ya?/ jonga da?",
-    "selectReasons": "wulu, wulundi'/ Gelu, gelundi' kuwe na kulya na 'yo'yolonikin na",
+    "selectReasons": "Wulu, wulundi'/ Gelu, gelundi' kuwe na kulya na 'yo'yolonikin na",
     "outcomeOfGoal": "Nyo nagon a yungundo 'borik yi ngo' nagon nye na jura na",
     "selectImprovement": "Wulu, wulundi'/ Gelu, gelundi' 'durjo /Tuka'de'",
     "visitFocus": "Ngo nagon nye na meta yi 'yolit na",
     "visit": "Yolit/ 'Yo'yu",
     "discardNewVisit": "Ko'yi' 'yolit na luduk na",
-    "clients": "lo /na Ngutu' lo ngangaraki lo",
+    "clients": "Lo /na Ngutu' lo ngangaraki lo",
     "clientHealthGoal": "&Client's Health Goal",
     "clientEducationGoal": "&Client's Education Goal",
     "clientSocialGoal": "&Client's Social Goal",
@@ -662,7 +666,7 @@
   },
   "screenNames": {
     "viewClient": "Mete met ngutu' lo ngangaraki lo",
-    "viewUser": "mete met katokitayinit",
+    "viewUser": "Mete met katokitayinit",
     "editUser": "Tetenaki  katokityinit lo 'bura'",
     "newUser": "Katokitayinit lo/ na luduk",
     "newVisit": "Yolit na luduk/ 'yo'yu togeleng/ ngutuu logo;n nyu' 'yo'yu a togeleng",
@@ -733,7 +737,7 @@
     "versionName": "Sikili/ Gbiyari lo karin",
     "syncSettings": "Pitit/ gboke tuneni 'borik yi pirit nageleng",
     "autoSyncing": "Tunakinda 'borik rere geleng",
-    "syncOverCellular": "tunda 'borik geleng yi murilot ki",
+    "syncOverCellular": "Tunda 'borik geleng yi murilot ki",
     "success": "A gbong na'but",
     "failed": "A tigga'/ Atika",
     "neverSynced": "Nyobulo tune' yi pirit na geleng",
