Updated referral translation

--- a/common/src/locales/bari.json
+++ b/common/src/locales/bari.json
@@ -464,7 +464,8 @@
     "selectReferralServices": "&Select referral services",
     "pending": "&Pending Referrals",
     "filterByType": "&Filter by Referral Types",
-    "filterByStatus": "&Filter by Status"
+    "filterByStatus": "&Filter by Status",
+    "filterByTypeDescription": "&Referrals that match at least one of the selected types will be displayed."
   },
   "risks": {
     "riskLevel": "Ngo' naron na gba da",
