Added a hover note with translation for referral details

--- a/common/src/locales/en.json
+++ b/common/src/locales/en.json
@@ -465,7 +465,8 @@
     "pending": "Pending Referrals",
     "filterByType": "Filter by Referral Types",
     "filterByStatus": "Filter by Status",
-    "filterByTypeDescription": "Referrals that match at least one of the selected types will be displayed."
+    "filterByTypeDescription": "Referrals that match at least one of the selected types will be displayed.",
+    "hoverDetails": "Hover over the details to see more information about each referral."
   },
   "risks": {
     "riskLevel": "Risk Level",
