added StatsDemographicFilter component

--- a/common/src/locales/bari.json
+++ b/common/src/locales/bari.json
@@ -733,7 +733,11 @@
     "totalNewFChild": "&Total New Female Child Clients:",
     "totalNewMChild": "&Total New Male Child Clients:",
     "allChildren": "&All Children",
-    "allAdults": "&All Adults"
+    "allAdults": "&All Adults",
+    "adult": "&Adult",
+    "child": "&Child",
+    "age": "&Age",
+    "filterByDemographic": "&Filter by Demographic"
   },
   "sync": {
     "sureResetLocalDB": "A to'diri do mimindi nyogu tunda/ pedda/ tetenakinda 'bura'",
