--- a/common/src/locales/en.json
+++ b/common/src/locales/en.json
@@ -733,7 +733,11 @@
     "totalNewFChild": "Total New Female Child Clients:",
     "totalNewMChild": "Total New Male Child Clients:",
     "allChildren": "All Children",
-    "allAdults": "All Adults"
+    "allAdults": "All Adults",
+    "adult": "Adult",
+    "child": "Child",
+    "age": "Age",
+    "filterByDemographic": "Filter by Demographic"
   },
   "sync": {
     "sureResetLocalDB": "Are you sure you want to reset local database",
