updated web stats translations

--- a/common/src/locales/en.json
+++ b/common/src/locales/en.json
@@ -363,7 +363,10 @@
     "caregiverDetails": "Caregiver Details",
     "chooseImageFrom": "Choose an Image from",
     "gallery": "Gallery",
-    "camera": "Camera"
+    "camera": "Camera",
+    "hcrType": "HCR Type",
+    "hostCommunity": "Host Community",
+    "refugee": "Refugee"
   },
   "referralAttr": {
     "dateReferred": "Date Referred",
@@ -755,7 +758,9 @@
     "totalDisFChild": "Total Female Children With Disabilities:",
     "totalDisMChild": "Total Male Chidlren With Disabilities:",
     "totalDisFAdult": "Total Female Adults With Disabilities:",
-    "totalDisMAdult": "Total Male Adults With Disabilities:"
+    "totalDisMAdult": "Total Male Adults With Disabilities:",
+    "specificDate": "Specific Date",
+    "monthly": "By Month"
   },
   "sync": {
     "sureResetLocalDB": "Are you sure you want to reset local database",
