Updated translation files

--- a/common/src/locales/en.json
+++ b/common/src/locales/en.json
@@ -366,7 +366,8 @@
     "camera": "Camera",
     "hcrType": "HCR Type",
     "hostCommunity": "Host Community",
-    "refugee": "Refugee"
+    "refugee": "Refugee",
+    "na": "NA"
   },
   "referralAttr": {
     "dateReferred": "Date Referred",
@@ -758,7 +759,9 @@
     "totalDisFChild": "Total Female Children With Disabilities:",
     "totalDisMChild": "Total Male Chidlren With Disabilities:",
     "totalDisFAdult": "Total Female Adults With Disabilities:",
-    "totalDisMAdult": "Total Male Adults With Disabilities:"
+    "totalDisMAdult": "Total Male Adults With Disabilities:",
+    "specificDate": "Specific Date",
+    "monthly": "By Month"
   },
   "sync": {
     "sureResetLocalDB": "Are you sure you want to reset local database",
