--- a/common/src/locales/bari.json
+++ b/common/src/locales/bari.json
@@ -202,7 +202,7 @@
   "alert": {
     "generalFailure": "Lyanget a konda 'borik",
     "DeleteAlertWithSubject": "Sene/ siyara kuwe na kulya {{subject}}",
-    "messageAlert": "Do a nyu' {{count}} longiyo lo luduk kulo konuk yi su'de ni",
+    "messageAlert": "Do a nyu' {{numMessages}} longiyo lo luduk kulo konuk yi su'de ni",
     "unauthorizedArchive": "&You are not authorized to archive/dearchive clients. Please ask an administrator",
     "actionFailure": "Nan pujo lyanget yi dingit nagong nan morju {{action}} na {{object}}",
     "unsyncedFailure": "Kine gayeresi' na kekebbu kine gbe nyobulo tune' yi pirit na geleng ko (kamononit lo, Kawuyunit lo) kogbon koko a kee' toworayi ka'de' ko lele' katokitayinit 'duddo yi dingit na tomorundi do yi pirit nageleng na.  KO do mindi 'de'ya nagong a nenut na miindi do a 'moke kine gayeresi na kekebu kine nene' dang",
