--- a/common/src/locales/en.json
+++ b/common/src/locales/en.json
@@ -482,6 +482,11 @@
     "social": "Social",
     "nutrition": "Nutrition",
     "mental": "Mental Health",
+    "nutritionGoalSet": "<1>Nutrition</1> goal status set to",
+    "mentalGoalSet": "<1>Mental health</1> goal status set to",
+    "socialGoalSet": "<1>Social</1> goal status set to",
+    "educationGoalSet": "<1>Education</1> goal status set to",
+    "healthGoalSet": "<1>Health</1> goal status set to",
     "healthSet": "<1>Health</1> risk set to",
     "healthChanged": "<1>Health risk</1> changed to",
     "educationSet": "<1>Education</1> risk set to",
@@ -721,19 +726,19 @@
     "allUsers": "All Users",
     "dateRange": "From {{start}} to {{end}}",
     "filterByDate": "Filter by Date",
-    "filterByUser": "Filter by User",
-    "totalFollowedUpFAdult": "Total Followed Up Female Adult Clients:",
-    "totalFollowedUpMAdult": "Total Followed Up Male Adult Clients:",
-    "totalFollowedUpFChild": "Total Followed Up Female Child Clients:",
-    "totalFollowedUpMChild": "Total Followed Up Male Child Clients:",
-    "followUpVisits": "Follow Up Visits:",
-    "newClients": "New Clients:",
-    "totalNewFAdult": "Total New Female Adult Clients:",
-    "totalNewMAdult": "Total New Male Adult Clients:",
-    "totalNewFChild": "Total New Female Child Clients:",
-    "totalNewMChild": "Total New Male Child Clients:",
+    "allAdults": "All Adults",
     "allChildren": "All Children",
-    "allAdults": "All Adults"
+    "totalNewMChild": "Total New Male Child Clients:",
+    "totalNewFChild": "Total New Female Child Clients:",
+    "totalNewMAdult": "Total New Male Adult Clients:",
+    "totalNewFAdult": "Total New Female Adult Clients:",
+    "newClients": "New Clients:",
+    "followUpVisits": "Follow Up Visits:",
+    "totalFollowedUpMChild": "Total Followed Up Male Child Clients:",
+    "totalFollowedUpFChild": "Total Followed Up Female Child Clients:",
+    "totalFollowedUpMAdult": "Total Followed Up Male Adult Clients:",
+    "totalFollowedUpFAdult": "Total Followed Up Female Adult Clients:",
+    "filterByUser": "Filter by User"
   },
   "sync": {
     "sureResetLocalDB": "Are you sure you want to reset local database",
