fix: update translations file and use goal fields instead of placeholders

--- a/common/src/locales/en.json
+++ b/common/src/locales/en.json
@@ -496,7 +496,10 @@
     "nutritionSet": "<1>Nutrition</1> risk set to",
     "nutritionChanged": "<1>Nutrition</1> risk changed to",
     "mentalSet": "<1>Mental health</1> risk set to",
-    "mentalChanged": "<1>Mental health</1> risk changed to"
+    "mentalChanged": "<1>Mental health</1> risk changed to",
+    "goalAchieved": "Achieved",
+    "goalInProgress": "In progress",
+    "goalCancelled": "Cancelled"
   },
   "riskLevelsAbbreviated": {
     "low": "LO",
