Update translations for New Requests 7-22-2025

--- a/common/src/locales/en.json
+++ b/common/src/locales/en.json
@@ -45,10 +45,10 @@
     "allClients": "All Clients",
     "showArchived": "Show Archived",
     "noVisits": "No Visits",
-    "noClients": "No Clients Found",
     "noPriorityClients": "No Priority Clients Found",
     "noOutstandingReferrals": "No Outstanding Referrals Found",
     "csvExport": "EXPORT TO CSV",
+    "noClients": "No Clients Found",
     "newInboxMessages": "You have <1>1</1> new message in your inbox",
     "newInboxMessages_plural": "You have <1>{{count}}</1> new messages in your inbox"
   },
@@ -56,13 +56,13 @@
     "amputee": "Amputee",
     "polio": "Polio",
     "spinalCordInjury": "Spinal Cord Injury",
-    "cerebralPalsy": "Cerebral Palsy",
-    "spinaBifida": "Spina Bifida",
-    "hydrocephalus": "Hydrocephalus",
     "congenitalAbnormality": "Congenital Abnormality",
     "paralysisCases": "Paralysis Cases",
     "dontKnow": "Don't Know",
-    "other": "Other"
+    "other": "Other",
+    "cerebralPalsy": "Cerebral Palsy",
+    "spinaBifida": "Spina Bifida",
+    "hydrocephalus": "Hydrocephalus"
   },
   "clientAttr": {
     "lastVisitDate": "Last visit date",
@@ -105,7 +105,6 @@
     "type": "Type",
     "name": "Name",
     "zone": "Zone",
-    "dashboard": "Dashboard",
     "update": "Update",
     "edit": "Edit",
     "submit": "Submit",
@@ -129,8 +128,6 @@
     "resolve": "Resolve",
     "wheelchair": "Wheelchair",
     "physiotherapy": "Physiotherapy",
-    "prosthetic": "Prosthetic",
-    "orthotic": "Orthotic",
     "alert": "Alert",
     "alerts": "Alerts",
     "discard": "Discard",
@@ -170,8 +167,6 @@
     "filterBy": "Filter by",
     "delete": "Delete",
     "requestTimedOut": "The request has timed out",
-    "requestTokenFailureHttp": "Request token failure: request failed with HTTP status {{respStatus}}.",
-    "requestTokenFailureInvalid": "Request token failure: the access and/or refresh token(s) received were invalid.",
     "create": "CREATE",
     "disable": "Disable",
     "goal": "Goal",
@@ -197,24 +192,24 @@
     "filter": "filter",
     "dataGridLabelRowsPerPage": "Rows per page:",
     "dataGridLabelDisplayedRows": "{{from}}–{{to}} of {{count}}",
-    "all": "All"
+    "areYouSureYouWantTo": "Are you sure you want to",
+    "all": "All",
+    "dashboard": "Dashboard",
+    "prosthetic": "Prosthetic",
+    "orthotic": "Orthotic",
+    "requestTokenFailureHttp": "Request token failure: request failed with HTTP status {{respStatus}}.",
+    "requestTokenFailureInvalid": "Request token failure: the access and/or refresh token(s) received were invalid.",
+    "startDate": "Start date",
+    "endDate": "End date"
   },
   "alert": {
     "generalFailure": "Something went Wrong",
     "DeleteAlertWithSubject": "Delete Alert with Subject: {{subject}}",
     "messageAlert": "You have {{numMessages}} new messages in your inbox.",
-    "unauthorizedArchive": "You are not authorized to archive/dearchive clients. Please ask an administrator",
     "actionFailure": "Encountered an error while trying to {{action}} the {{object}}!",
     "unsyncedFailure": "The following changes could not be synced with the server because they have been modified by another user since your last sync. \n \n If you would like to keep your version, you'll need to make the following changes again:",
     "missingLocalChanges": "There are no local changes on your device.",
-    "obsoleteDataForServerUpdating": "Our servers are undergoing major changes. As a result, any old data is now obsolete and cannot be synced. If you would still like to sync, then any local changes on your device must first be destroyed.",
-    "directUserToWebapp": "You should use the web app to recreate any local changes, any changes on the following entities will be lost:",
-    "localDataAffectOnlyNotice": "Note that this will only affect local data, any settings that have previously been set will be unaffected.",
-    "timeDataUsageNotice": "This action may take awhile, and a considerable amount of cellular data may be used.",
-    "clearLocalDataConfirmation": "If you understand and would still like to proceed with the sync, type \"clear local data\" to confirm.",
     "outdatedApp": "This App is Out of Date",
-    "newVersionAvailability": "A new version of the HHA CBR app is available on the Google Play Store. Please update your app now, or you will be unable to sync.",
-    "reinstallingSuggestion": "If you have the latest version of the app and still see this message, then try uninstalling and reinstalling the app.",
     "logoutNotice": "Are you sure you want to logout?",
     "actionConfirmationNotice": "Are you sure you want to {{action}} this {{object}}?",
     "generalFailureTryAgain": "Something went wrong. Please go back and try again.",
@@ -226,7 +221,15 @@
     "submitReferralError": "An error occurred when submitting the referral",
     "submitVisitError": "Error occurred trying to submit the visit",
     "loadStatsFailure": "Something went wrong loading the statistics. Please try again.",
-    "editUserFailure": "Something went wrong trying to edit that user. Please try again."
+    "editUserFailure": "Something went wrong trying to edit that user. Please try again.",
+    "unauthorizedArchive": "You are not authorized to archive/dearchive clients. Please ask an administrator",
+    "obsoleteDataForServerUpdating": "Our servers are undergoing major changes. As a result, any old data is now obsolete and cannot be synced. If you would still like to sync, then any local changes on your device must first be destroyed.",
+    "directUserToWebapp": "You should use the web app to recreate any local changes, any changes on the following entities will be lost:",
+    "localDataAffectOnlyNotice": "Note that this will only affect local data, any settings that have previously been set will be unaffected.",
+    "timeDataUsageNotice": "This action may take awhile, and a considerable amount of cellular data may be used.",
+    "clearLocalDataConfirmation": "If you understand and would still like to proceed with the sync, type \"clear local data\" to confirm.",
+    "newVersionAvailability": "A new version of the HHA CBR app is available on the Google Play Store. Please update your app now, or you will be unable to sync.",
+    "reinstallingSuggestion": "If you have the latest version of the app and still see this message, then try uninstalling and reinstalling the app."
   },
   "admin": {
     "username": "Username",
@@ -326,6 +329,15 @@
     "caregiverEmail": "Caregiver Email",
     "disability": "Disabilities",
     "otherDisability": "Other Disabilities",
+    "caregiverDetails": "Caregiver Details",
+    "chooseImageFrom": "Choose an Image from",
+    "gallery": "Gallery",
+    "camera": "Camera",
+    "na": "NA",
+    "hcrType": "HCR Type",
+    "hostCommunity": "Host Community",
+    "refugee": "Refugee",
+    "sureToCancelEditClient": "Are you sure you want to cancel editing the client?\n Clicking OK will not save any edited information.",
     "healthRisk": "Health Risk",
     "healthRequirements": "Health Requirement(s)",
     "healthGoals": "Health Goal(s)",
@@ -358,51 +370,18 @@
     "archive": "archive",
     "dearchive": "dearchive",
     "cannotEditArchived": "You cannot edit clients while they are archived",
-    "sureToClearForm": "Are you sure you want to clear the form?",
-    "caregiverDetails": "Caregiver Details",
-    "chooseImageFrom": "Choose an Image from",
-    "gallery": "Gallery",
-    "camera": "Camera",
-    "hcrType": "HCR Type",
-    "hostCommunity": "Host Community",
-    "refugee": "Refugee",
-    "na": "NA",
-    "sureToCancelEditClient": "Are you sure you want to cancel editing the client?\n Clicking OK will not save any edited information."
-  },
-  "referralAttr": {
-    "dateReferred": "Date Referred",
-    "newReferral": "New Referral",
-    "referralPosted": "Referral Posted",
-    "referralResolutionFailureAlert": "Something went wrong when submitting the outcome and resolving the referral. Please try that again.",
-    "resolveVerb": "Resolve",
-    "markResolved": "Mark Resolved",
-    "referralDate": "Referral Date",
-    "resolutionDate": "Resolution Date",
-    "resolutionStatus_pending": "Referral Pending",
-    "resolutionStatus_resolved": "Referral Resolved",
-    "condition_physiotherapy": "Physiotherapy Condition",
-    "condition_mental": "Mental Health Condition",
-    "injuryLocation_prosthetic": "Prosthetic Injury Location",
-    "injuryLocation_orthotic": "Orthotic Injury Location",
-    "otherServiceRequired": "Other Services Required",
-    "resolutionStatus_resolved_bold": "<1>Referral</1> Resolved",
-    "resolutionStatus_pending_bold": "<1>Referral</1> Pending"
+    "sureToClearForm": "Are you sure you want to clear the form?"
   },
   "referral": {
     "client_id": "Client",
     "wheelchair": "Wheelchair",
     "wheelchairExperience": "Wheelchair Experience",
     "picture": "picture",
-    "hipWidth": "Hip Width",
     "wheelchairOwned": "Client Owns a Wheelchair",
     "wheelchairRepairable": "Client's Wheelchair is Repairable",
     "physiotherapy": "Physiotherapy",
     "condition": "Condition",
     "conditionOther": "Other Condition",
-    "prosthetic": "Prosthetic",
-    "prostheticInjuryLocation": "Prosthetic Injury Location",
-    "orthotic": "Orthotic",
-    "orthoticInjuryLocation": "Orthotic Injury Location",
     "mental": "Mental",
     "mentalHealth": "Mental Health",
     "mentalHealthCondition": "Mental Condition",
@@ -426,8 +405,6 @@
     "weakLeg": "Weak Leg",
     "cerebralPalsy": "Cerebral Palsy",
     "spinaBifida": "Spina Bifida",
-    "clubFoot": "Club Foot",
-    "injectionNeuritis": "Injection Neuritis",
     "dropFoot": "Drop Foot",
     "polio": "Polio",
     "other": "Other",
@@ -436,7 +413,6 @@
     "safeguarding": "Safeguarding",
     "basic": "Basic",
     "intermediate": "Intermediate",
-    "autism": "Autism",
     "dementia": "Dementia",
     "experience": "Wheelchair Experience",
     "ownership": "Wheelchair Owned",
@@ -470,7 +446,15 @@
     "filterByType": "Filter by Referral Types",
     "filterByStatus": "Filter by Status",
     "filterByTypeDescription": "Referrals that match at least one of the selected types will be displayed.",
-    "hoverDetails": "Hover over the details to see more information about each referral."
+    "hoverDetails": "Hover over the details to see more information about each referral.",
+    "hipWidth": "Hip Width",
+    "prosthetic": "Prosthetic",
+    "prostheticInjuryLocation": "Prosthetic Injury Location",
+    "orthotic": "Orthotic",
+    "orthoticInjuryLocation": "Orthotic Injury Location",
+    "clubFoot": "Club Foot",
+    "injectionNeuritis": "Injection Neuritis",
+    "autism": "Autism"
   },
   "risks": {
     "riskLevel": "Risk Level",
@@ -501,7 +485,8 @@
     "nutritionSet": "<1>Nutrition</1> risk set to",
     "nutritionChanged": "<1>Nutrition</1> risk changed to",
     "mentalSet": "<1>Mental health</1> risk set to",
-    "mentalChanged": "<1>Mental health</1> risk changed to"
+    "mentalChanged": "<1>Mental health</1> risk changed to",
+    "area": "Area"
   },
   "riskLevelsAbbreviated": {
     "low": "LO",
@@ -557,7 +542,8 @@
     "shelterAndCare": "Shelter and Care",
     "foodAndNutrition": "Food and Nutrition",
     "education": "Education (under 18)",
-    "livelihood": "Livelihood (over 16)"
+    "livelihood": "Livelihood (over 16)",
+    "errorOccurred": "Error occurred when submitting the survey:"
   },
   "users": {
     "admin": "Admin",
@@ -622,11 +608,6 @@
     "clientSocialGoalStatus": "Client's Social Goal Status",
     "clientNutritionGoalStatus": "Client's Nutrition Goal Status",
     "clientMentalHealthGoalStatus": "Client's Mental Health Goal Status",
-    "clientHealthGoalRequirement": "Client's Health Goal Requirements",
-    "clientEducationGoalRequirement": "Client's Education Goal Requirements",
-    "clientSocialGoalRequirement": "Client's Social Goal Requirements",
-    "clientNutritionGoalRequirement": "Client's Nutrition Goal Requirements",
-    "clientMentalHealthGoalRequirement": "Client's Mental Health Goal Requirements",
     "PLACEHOLDER-socialRequirements": {
       "0": "Improve connection with community",
       "1": "Improve connection with family",
@@ -679,7 +660,12 @@
       "1": "In progress",
       "2": "Not Achieved",
       "3": "No goals"
-    }
+    },
+    "clientHealthGoalRequirement": "Client's Health Goal Requirements",
+    "clientEducationGoalRequirement": "Client's Education Goal Requirements",
+    "clientSocialGoalRequirement": "Client's Social Goal Requirements",
+    "clientNutritionGoalRequirement": "Client's Nutrition Goal Requirements",
+    "clientMentalHealthGoalRequirement": "Client's Mental Health Goal Requirements"
   },
   "screenNames": {
     "viewClient": "View client",
@@ -714,7 +700,6 @@
     "viewAllZone": "View All Zone",
     "byZone": "By Zone",
     "totalVisits": "Total Visits:",
-    "clickBarToFilter": "Click on bar to filter by zone",
     "totalUnresolved": "Total Unresolved:",
     "totalResolved": "Total Resolved:",
     "unresolved": "Unresolved",
@@ -735,18 +720,19 @@
     "allUsers": "All Users",
     "dateRange": "From {{start}} to {{end}}",
     "filterByDate": "Filter by Date",
-    "allAdults": "All Adults",
-    "allChildren": "All Children",
-    "totalNewMChild": "Total New Male Child Clients:",
-    "totalNewFChild": "Total New Female Child Clients:",
-    "totalNewMAdult": "Total New Male Adult Clients:",
-    "totalNewFAdult": "Total New Female Adult Clients:",
-    "newClients": "New Clients:",
-    "followUpVisits": "Follow Up Visits:",
-    "totalFollowedUpMChild": "Total Followed Up Male Child Clients:",
-    "totalFollowedUpFChild": "Total Followed Up Female Child Clients:",
-    "totalFollowedUpMAdult": "Total Followed Up Male Adult Clients:",
+    "filterByUser": "Filter by User",
     "totalFollowedUpFAdult": "Total Followed Up Female Adult Clients:",
+    "totalFollowedUpMAdult": "Total Followed Up Male Adult Clients:",
+    "totalFollowedUpFChild": "Total Followed Up Female Child Clients:",
+    "totalFollowedUpMChild": "Total Followed Up Male Child Clients:",
+    "followUpVisits": "Follow Up Visits:",
+    "newClients": "New Clients:",
+    "totalNewFAdult": "Total New Female Adult Clients:",
+    "totalNewMAdult": "Total New Male Adult Clients:",
+    "totalNewFChild": "Total New Female Child Clients:",
+    "totalNewMChild": "Total New Male Child Clients:",
+    "allChildren": "All Children",
+    "allAdults": "All Adults",
     "adult": "Adult",
     "child": "Child",
     "age": "Age",
@@ -771,7 +757,8 @@
     "totalDisMAdult": "Total Male Adults With Disabilities:",
     "specificDate": "Specific Date",
     "monthly": "By Month",
-    "downloadAsCSV": "<1>Download statistics</1> as a CSV file."
+    "downloadAsCSV": "<1>Download statistics</1> as a CSV file.",
+    "clickBarToFilter": "Click on bar to filter by zone"
   },
   "sync": {
     "sureResetLocalDB": "Are you sure you want to reset local database",
@@ -814,5 +801,41 @@
     "english": "English",
     "selectedLanguage": "Selected Language:",
     "selectLanguage": "Select Language"
+  },
+  "referralAttr": {
+    "resolutionStatus_resolved_bold": "<1>Referral</1> Resolved",
+    "resolutionStatus_pending_bold": "<1>Referral</1> Pending",
+    "dateReferred": "Date Referred",
+    "newReferral": "New Referral",
+    "referralPosted": "Referral Posted",
+    "referralResolutionFailureAlert": "Something went wrong when submitting the outcome and resolving the referral. Please try that again.",
+    "resolveVerb": "Resolve",
+    "markResolved": "Mark Resolved",
+    "referralDate": "Referral Date",
+    "resolutionDate": "Resolution Date",
+    "resolutionStatus_pending": "Referral Pending",
+    "resolutionStatus_resolved": "Referral Resolved",
+    "condition_physiotherapy": "Physiotherapy Condition",
+    "condition_mental": "Mental Health Condition",
+    "injuryLocation_prosthetic": "Prosthetic Injury Location",
+    "injuryLocation_orthotic": "Orthotic Injury Location",
+    "otherServiceRequired": "Other Services Required"
+  },
+  "goals": {
+    "notActive": "Not active",
+    "currentGoal": "Current goal",
+    "previousGoals": "View previous goals",
+    "viewingPreviousGoals": "Viewing previous goals",
+    "goalStatus": "Goal status",
+    "unsavedChangesWarning": "You have unsaved changes. Do you want to save the changes?",
+    "unsavedChanges": "Unsaved changes",
+    "updateGoalStatus": "Update goal status",
+    "visitFocus": "Visit focus",
+    "setStatusTo": "Goal status set to {{status}}",
+    "noCurrentGoalSet": "No current goal set",
+    "createNewGoal": "Create new goal",
+    "createNew": "Create new",
+    "viewPrevious": "View previous",
+    "noCurrentOngoingGoals": "No current ongoing goals"
   }
 }
