--- a/common/src/locales/bari.json
+++ b/common/src/locales/bari.json
@@ -45,10 +45,10 @@
     "allClients": "Ngutt ling lo memeta",
     "showArchived": "Kpene kulya / payil logbon  'dela pajopajo'",
     "noVisits": "Yolisi' 'ban",
-    "noClients": "&No Clients Found",
     "noPriorityClients": "Kwake 'bayin na ŋodeki a ryö",
     "noOutstandingReferrals": "Laset bayin na mömundyö nagwon a je ryei I sonyon ŋerot",
     "csvExport": "Sonye I (titimesi) pirit tetenet",
+    "noClients": "&No Clients Found",
     "newInboxMessages": "&You have <1>1</1> new message in your inbox",
     "newInboxMessages_plural": "&You have <1>{{count}}</1> new messages in your inbox"
   },
@@ -56,13 +56,13 @@
     "amputee": "Lo 'dungo",
     "polio": "Woji/ Raga'ba",
     "spinalCordInjury": "Pebga/ bongoji'  na  lokirgbigbi'",
-    "cerebralPalsy": "&Cerebral Palsy",
-    "spinaBifida": "&Spina Bifida",
-    "hydrocephalus": "&Hydrocephalus",
     "congenitalAbnormality": "Dwayesi' / bateesi' na yungeni to",
     "paralysisCases": "Kulya/ kepesi' likun na mugun",
     "dontKnow": "A denda/ 'ba den",
-    "other": "Lele' / nene'"
+    "other": "Lele' / nene'",
+    "cerebralPalsy": "&Cerebral Palsy",
+    "spinaBifida": "&Spina Bifida",
+    "hydrocephalus": "&Hydrocephalus"
   },
   "clientAttr": {
     "lastVisitDate": "Yolit na 'dutet/  'yolit na 'dungoddu na",
@@ -105,7 +105,6 @@
     "type": "Sikili",
     "name": "Karin",
     "zone": "Gboke",
-    "dashboard": "&Dashboard",
     "update": "Tokorju na ngo' na gbong yi konda na 'borik",
     "edit": "Tetenakinda 'bura'",
     "submit": "Putukindo/ potoddu",
@@ -129,8 +128,6 @@
     "resolve": "Tutungoki, tetenaki",
     "wheelchair": "Si'det na jijiko",
     "physiotherapy": "Ririyo,/ Siyo/ Nota … na mugun",
-    "prosthetic": "&Prosthetic",
-    "orthotic": "&Orthotic",
     "alert": "Mondu jo",
     "alerts": "Tukoki' yi mondu jo",
     "discard": "Paju/ Ko'yu/ Gupaddu yu",
@@ -170,8 +167,6 @@
     "filterBy": "Liya - lija, Tiya -tija, ko",
     "delete": "Sene, siyara'",
     "requestTimedOut": "Molet na dingit nayit anyu 'duddo",
-    "requestTokenFailureHttp": "&Request token failure: request failed with HTTP status {{respStatus}}.",
-    "requestTokenFailureInvalid": "&Request token failure: the access and/or refresh token(s) received were invalid.",
     "create": "Gbewunda/ Gbeja",
     "disable": "Ŋode",
     "goal": "Tirikwet",
@@ -197,24 +192,24 @@
     "filter": "liline (tobulene)",
     "dataGridLabelRowsPerPage": "Loresi I pele na manini:",
     "dataGridLabelDisplayedRows": "{{from}}–{{to}} of {{count}}",
-    "all": "&All"
+    "areYouSureYouWantTo": "A to'diri do mindi",
+    "all": "&All",
+    "dashboard": "&Dashboard",
+    "prosthetic": "&Prosthetic",
+    "orthotic": "&Orthotic",
+    "requestTokenFailureHttp": "&Request token failure: request failed with HTTP status {{respStatus}}.",
+    "requestTokenFailureInvalid": "&Request token failure: the access and/or refresh token(s) received were invalid.",
+    "startDate": "&Start date",
+    "endDate": "&End date"
   },
   "alert": {
     "generalFailure": "Lyanget a konda 'borik",
     "DeleteAlertWithSubject": "Sene/ siyara kuwe na kulya {{subject}}",
     "messageAlert": "Do a nyu' {{numMessages}} longiyo lo luduk kulo konuk yi su'de ni",
-    "unauthorizedArchive": "&You are not authorized to archive/dearchive clients. Please ask an administrator",
     "actionFailure": "Nan pujo lyanget yi dingit nagong nan morju {{action}} na {{object}}",
     "unsyncedFailure": "Kine gayeresi' na kekebbu kine gbe nyobulo tune' yi pirit na geleng ko (kamononit lo, Kawuyunit lo) kogbon koko a kee' toworayi ka'de' ko lele' katokitayinit 'duddo yi dingit na tomorundi do yi pirit nageleng na.  KO do mindi 'de'ya nagong a nenut na miindi do a 'moke kine gayeresi na kekebu kine nene' dang",
     "missingLocalChanges": "Gaeyresi' na konda 'borik ni 'ban konuk yi turu'buti ni",
-    "obsoleteDataForServerUpdating": "&Our servers are undergoing major changes. As a result, any old data is now obsolete and cannot be synced. If you would still like to sync, then any local changes on your device must first be destroyed.",
-    "directUserToWebapp": "&You should use the web app to recreate any local changes, any changes on the following entities will be lost:",
-    "localDataAffectOnlyNotice": "&Note that this will only affect local data, any settings that have previously been set will be unaffected.",
-    "timeDataUsageNotice": "&This action may take awhile, and a considerable amount of cellular data may be used.",
-    "clearLocalDataConfirmation": "&If you understand and would still like to proceed with the sync, type \"clear local data\" to confirm.",
     "outdatedApp": "Yilo App gbe a kita",
-    "newVersionAvailability": "&A new version of the HHA CBR app is available on the Google Play Store. Please update your app now, or you will be unable to sync.",
-    "reinstallingSuggestion": "&If you have the latest version of the app and still see this message, then try uninstalling and reinstalling the app.",
     "logoutNotice": "A to'diri do mindi kindu?",
     "actionConfirmationNotice": "A to'diri do mindi {{action}} yina {{object}}?",
     "generalFailureTryAgain": "Nene ŋo awuddya börik a naron böŋö, woyukani köti ado nyöki -nyök köti.",
@@ -226,7 +221,15 @@
     "submitReferralError": "Lyaŋet a kondya börik, I diŋit na sondu na loŋio ŋerot",
     "submitVisitError": "Lyaŋet a kondya borik, I diŋit nagon ködyö wukini 'yölit",
     "loadStatsFailure": "Nene ŋo naron akondya borik, i sondu I pirit kenet, boŋo nyöki koti.",
-    "editUserFailure": "Nene ŋo a wuddya börik a naron, I diŋit na wurö na kakitanit.Böŋö nyöki köti."
+    "editUserFailure": "Nene ŋo a wuddya börik a naron, I diŋit na wurö na kakitanit.Böŋö nyöki köti.",
+    "unauthorizedArchive": "&You are not authorized to archive/dearchive clients. Please ask an administrator",
+    "obsoleteDataForServerUpdating": "&Our servers are undergoing major changes. As a result, any old data is now obsolete and cannot be synced. If you would still like to sync, then any local changes on your device must first be destroyed.",
+    "directUserToWebapp": "&You should use the web app to recreate any local changes, any changes on the following entities will be lost:",
+    "localDataAffectOnlyNotice": "&Note that this will only affect local data, any settings that have previously been set will be unaffected.",
+    "timeDataUsageNotice": "&This action may take awhile, and a considerable amount of cellular data may be used.",
+    "clearLocalDataConfirmation": "&If you understand and would still like to proceed with the sync, type \"clear local data\" to confirm.",
+    "newVersionAvailability": "&A new version of the HHA CBR app is available on the Google Play Store. Please update your app now, or you will be unable to sync.",
+    "reinstallingSuggestion": "&If you have the latest version of the app and still see this message, then try uninstalling and reinstalling the app."
   },
   "admin": {
     "username": "Karin ti katokitayinit",
@@ -326,6 +329,15 @@
     "caregiverEmail": "Email na katiyunit/ kametanit",
     "disability": "Bateesi'",
     "otherDisability": "Kule' bateesi'",
+    "caregiverDetails": "Tokoresi na gululök, ti ŋuto kamatanit",
+    "chooseImageFrom": "Wulundye ŋöjinoti ko",
+    "gallery": "’Delet na ŋöjino",
+    "camera": "Miraya (Moket) na ŋöjino",
+    "na": "Ti temakindya",
+    "hcrType": "&HCR Type",
+    "hostCommunity": "&Host Community",
+    "refugee": "&Refugee",
+    "sureToCancelEditClient": "&Are you sure you want to cancel editing the client?\n Clicking OK will not save any edited information.",
     "healthRisk": "&Health Risk",
     "healthRequirements": "&Health Requirement(s)",
     "healthGoals": "&Health Goal(s)",
@@ -358,51 +370,18 @@
     "archive": "&archive",
     "dearchive": "&dearchive",
     "cannotEditArchived": "&You cannot edit clients while they are archived",
-    "sureToClearForm": "&Are you sure you want to clear the form?",
-    "caregiverDetails": "Tokoresi na gululök, ti ŋuto kamatanit",
-    "chooseImageFrom": "Wulundye ŋöjinoti ko",
-    "gallery": "’Delet na ŋöjino",
-    "camera": "Miraya (Moket) na ŋöjino",
-    "hcrType": "&HCR Type",
-    "hostCommunity": "&Host Community",
-    "refugee": "&Refugee",
-    "na": "Ti temakindya",
-    "sureToCancelEditClient": "&Are you sure you want to cancel editing the client?\n Clicking OK will not save any edited information."
-  },
-  "referralAttr": {
-    "dateReferred": "&Date Referred",
-    "newReferral": "&New Referral",
-    "referralPosted": "&Referral Posted",
-    "referralResolutionFailureAlert": "&Something went wrong when submitting the outcome and resolving the referral. Please try that again.",
-    "resolveVerb": "&Resolve",
-    "markResolved": "&Mark Resolved",
-    "referralDate": "&Referral Date",
-    "resolutionDate": "&Resolution Date",
-    "resolutionStatus_pending": "&Referral Pending",
-    "resolutionStatus_resolved": "&Referral Resolved",
-    "condition_physiotherapy": "&Physiotherapy Condition",
-    "condition_mental": "&Mental Health Condition",
-    "injuryLocation_prosthetic": "&Prosthetic Injury Location",
-    "injuryLocation_orthotic": "&Orthotic Injury Location",
-    "otherServiceRequired": "&Other Services Required",
-    "resolutionStatus_resolved_bold": "<1>Sonye ŋerot</1> Tobulene",
-    "resolutionStatus_pending_bold": "<1>Sonye ŋerot</1> Momonundyö"
+    "sureToClearForm": "&Are you sure you want to clear the form?"
   },
   "referral": {
     "client_id": "Ngutuu' lo Ngangaraki'",
     "wheelchair": "Si'det na jijiko",
     "wheelchairExperience": "Denda/ denet na si'det na jijiko",
     "picture": "Ngojinoti",
-    "hipWidth": "&Hip Width",
     "wheelchairOwned": "Ngutu' lo ngangaraki lo a monye lo si'det na jijiko",
     "wheelchairRepairable": "Si'det na jijiko na ngutu' lo ngamgaraki lo bubulo tetena wa'",
     "physiotherapy": "Nota, siyo,/ Tojumuki' na mugun na yi kita 'bura'",
     "condition": "Yongit",
     "conditionOther": "Kune' yongesi'",
-    "prosthetic": "&Prosthetic",
-    "prostheticInjuryLocation": "&Prosthetic Injury Location",
-    "orthotic": "&Orthotic",
-    "orthoticInjuryLocation": "&Orthotic Injury Location",
     "mental": "Yeyeesi'",
     "mentalHealth": "Kelan na Yeyeesi'",
     "mentalHealthCondition": "Yongesi' ti yeyeesi'",
@@ -426,8 +405,6 @@
     "weakLeg": "Mokot lo 'bakan na ringit",
     "cerebralPalsy": "Kwinyit na gbong ko dwayesi'",
     "spinaBifida": "Lori'gbigbi'",
-    "clubFoot": "Dapanit na du'yo ??",
-    "injectionNeuritis": "Wini Suwet lo murilot ??",
     "dropFoot": "Dapanit na bata",
     "polio": "Woji",
     "other": "Lele' /Nene'",
@@ -436,7 +413,6 @@
     "safeguarding": "Rurugga/ Tiju 'bura",
     "basic": "Mimiinikin parik/ a mokim",
     "intermediate": "Gbe kiden",
-    "autism": "&Autism",
     "dementia": "Ret/ ayan lo tikinda yeyeesi' ti ngutu' yi bobongotu/ Ret , tuwanti lo bongo",
     "experience": "Denda/ denet na si'det na jijiko",
     "ownership": "Si'det na jijiko na a na lopeng",
@@ -470,7 +446,15 @@
     "filterByType": "Liline ko ŋo ti ŋerot ka'de kad'e",
     "filterByStatus": "&Filter by Status",
     "filterByTypeDescription": "&Referrals that match at least one of the selected types will be displayed.",
-    "hoverDetails": "&Hover over the details to see more information about each referral."
+    "hoverDetails": "&Hover over the details to see more information about each referral.",
+    "hipWidth": "&Hip Width",
+    "prosthetic": "&Prosthetic",
+    "prostheticInjuryLocation": "&Prosthetic Injury Location",
+    "orthotic": "&Orthotic",
+    "orthoticInjuryLocation": "&Orthotic Injury Location",
+    "clubFoot": "Dapanit na du'yo ??",
+    "injectionNeuritis": "Wini Suwet lo murilot ??",
+    "autism": "&Autism"
   },
   "risks": {
     "riskLevel": "Ngo' naron na gba da",
@@ -501,7 +485,8 @@
     "nutritionSet": "&<1>Nutrition</1> risk set to",
     "nutritionChanged": "&<1>Nutrition</1> risk changed to",
     "mentalSet": "&<1>Mental health</1> risk set to",
-    "mentalChanged": "&<1>Mental health</1> risk changed to"
+    "mentalChanged": "&<1>Mental health</1> risk changed to",
+    "area": "&Area"
   },
   "riskLevelsAbbreviated": {
     "low": "GK",
@@ -557,7 +542,8 @@
     "shelterAndCare": "Morogo/ Tilimot ko tiyu",
     "foodAndNutrition": "Doti ko kinyojin",
     "education": "Kenda/ todino/ jujumbu (ti nyu' 'ba 'dur !8)",
-    "livelihood": "Gbolong (lwolwong 16)"
+    "livelihood": "Gbolong (lwolwong 16)",
+    "errorOccurred": "&Error occurred when submitting the survey:"
   },
   "users": {
     "admin": "Ka'dolanit/ duma'",
@@ -622,11 +608,6 @@
     "clientSocialGoalStatus": "Tirikwesi ti gwon ko lodir ti ŋutu ŋodeki",
     "clientNutritionGoalStatus": "Tirikwesi ti nyesu na ŋuto ŋode",
     "clientMentalHealthGoalStatus": "Tirikwesi ti yeyesi ko kelan na ŋuto ŋode",
-    "clientHealthGoalRequirement": "Client's Health Goal Requirements",
-    "clientEducationGoalRequirement": "Client's Education Goal Requirements",
-    "clientSocialGoalRequirement": "Client's Social Goal Requirements",
-    "clientNutritionGoalRequirement": "Client's Nutrition Goal Requirements",
-    "clientMentalHealthGoalRequirement": "Client's Mental Health Goal Requirements",
     "PLACEHOLDER-socialRequirements": {
       "0": "&Improve connection with community",
       "1": "&Improve connection with family",
@@ -679,7 +660,12 @@
       "1": "&In progress",
       "2": "&Not Achieved",
       "3": "&No goals"
-    }
+    },
+    "clientHealthGoalRequirement": "&Client's Health Goal Requirements",
+    "clientEducationGoalRequirement": "&Client's Education Goal Requirements",
+    "clientSocialGoalRequirement": "&Client's Social Goal Requirements",
+    "clientNutritionGoalRequirement": "&Client's Nutrition Goal Requirements",
+    "clientMentalHealthGoalRequirement": "&Client's Mental Health Goal Requirements"
   },
   "screenNames": {
     "viewClient": "Mete met ngutu' lo ngangaraki lo",
@@ -714,7 +700,6 @@
     "viewAllZone": "Meta/ dena/ tibbo na gbokiyot kulo ling",
     "byZone": "Kepo yi gbokiyot/ gboke ko gboke",
     "totalVisits": "Namba ling na 'yolesi/ Namba ling na ngutuu lo 'yo'yu:",
-    "clickBarToFilter": "&Click on bar to filter by zone",
     "totalUnresolved": "Ngo 'ban na tutungo:",
     "totalResolved": "A nyu' tetenaki'/ tutungoki' long/ ngo ling gbe 'bura:",
     "unresolved": "Ba tetenaki/ tutungoki' 'bura/ pitundo tinu",
@@ -772,7 +757,8 @@
     "totalDisMAdult": "&Total Male Adults With Disabilities:",
     "specificDate": "&Specific Date",
     "monthly": "&By Month",
-    "downloadAsCSV": "&<1>Download statistics</1> as a CSV file."
+    "downloadAsCSV": "&<1>Download statistics</1> as a CSV file.",
+    "clickBarToFilter": "&Click on bar to filter by zone"
   },
   "sync": {
     "sureResetLocalDB": "A to'diri do mimindi nyogu tunda/ pedda/ tetenakinda 'bura'",
@@ -815,5 +801,41 @@
     "english": "Kutuk na mundu lokwe",
     "selectedLanguage": "Kutuk na wulye:",
     "selectLanguage": "Wulu kutuk na jajama"
+  },
+  "referralAttr": {
+    "resolutionStatus_resolved_bold": "<1>Sonye ŋerot</1> Tobulene",
+    "resolutionStatus_pending_bold": "<1>Sonye ŋerot</1> Momonundyö",
+    "dateReferred": "&Date Referred",
+    "newReferral": "&New Referral",
+    "referralPosted": "&Referral Posted",
+    "referralResolutionFailureAlert": "&Something went wrong when submitting the outcome and resolving the referral. Please try that again.",
+    "resolveVerb": "&Resolve",
+    "markResolved": "&Mark Resolved",
+    "referralDate": "&Referral Date",
+    "resolutionDate": "&Resolution Date",
+    "resolutionStatus_pending": "&Referral Pending",
+    "resolutionStatus_resolved": "&Referral Resolved",
+    "condition_physiotherapy": "&Physiotherapy Condition",
+    "condition_mental": "&Mental Health Condition",
+    "injuryLocation_prosthetic": "&Prosthetic Injury Location",
+    "injuryLocation_orthotic": "&Orthotic Injury Location",
+    "otherServiceRequired": "&Other Services Required"
+  },
+  "goals": {
+    "notActive": "&Not active",
+    "currentGoal": "&Current goal",
+    "previousGoals": "&View previous goals",
+    "viewingPreviousGoals": "&Viewing previous goals",
+    "goalStatus": "&Goal status",
+    "unsavedChangesWarning": "&You have unsaved changes. Do you want to save the changes?",
+    "unsavedChanges": "&Unsaved changes",
+    "updateGoalStatus": "&Update goal status",
+    "visitFocus": "&Visit focus",
+    "setStatusTo": "&Goal status set to {{status}}",
+    "noCurrentGoalSet": "&No current goal set",
+    "createNewGoal": "&Create new goal",
+    "createNew": "&Create new",
+    "viewPrevious": "&View previous",
+    "noCurrentOngoingGoals": "&No current ongoing goals"
   }
 }
