678 fix trasnaltions and update translateGoalStatusSummary helper

--- a/common/src/locales/bari.json
+++ b/common/src/locales/bari.json
@@ -836,6 +836,11 @@
     "createNewGoal": "&Create new goal",
     "createNew": "&Create new",
     "viewPrevious": "&View previous",
-    "noCurrentOngoingGoals": "&No current ongoing goals"
+    "noCurrentOngoingGoals": "&No current ongoing goals",
+    "healthSet": "&<1>Health</1> goal status set to",
+    "educationSet": "&<1>Education</1> goal status set to",
+    "socialSet": "&<1>Social</1> goal status set to",
+    "nutritionSet": "&<1>Nutrition</1> goal status set to",
+    "mentalSet": "&<1>Mental Health</1> goal status set to"
   }
 }
