feat: update dropdown options to build dynamically and refactor to use keys instead of values on backend

--- a/common/src/locales/bari.json
+++ b/common/src/locales/bari.json
@@ -857,7 +857,7 @@
         "Malaria": "&Malaria treatment",
         "Medical": "&Medical assistance",
         "Wound": "&Wound care for pressure sores",
-        "Mobility": "wheelchair etc",
+        "Mobility": "&Mobility device - crutches",
         "Physiotherapy": "&Physiotherapy"
       },
       "goal": {
