feat: add dropdowns to mobile and refactor to use keys, add image subtitle to new client form

--- a/common/src/locales/bari.json
+++ b/common/src/locales/bari.json
@@ -371,7 +371,8 @@
     "archive": "&archive",
     "dearchive": "&dearchive",
     "cannotEditArchived": "&You cannot edit clients while they are archived",
-    "sureToClearForm": "&Are you sure you want to clear the form?"
+    "sureToClearForm": "&Are you sure you want to clear the form?",
+    "imageSubtitle": "&Press the icon to upload an image."
   },
   "referral": {
     "client_id": "Ngutuu' lo Ngangaraki'",
