update cancellation reason "other" placeholder text and adjust mobile dropdown styling

--- a/common/src/locales/en.json
+++ b/common/src/locales/en.json
@@ -488,7 +488,8 @@
     "nutritionChanged": "<1>Nutrition</1> risk changed to",
     "mentalSet": "<1>Mental health</1> risk set to",
     "mentalChanged": "<1>Mental health</1> risk changed to",
-    "area": "Area"
+    "area": "Area",
+    "specify": "Please specify"
   },
   "riskLevelsAbbreviated": {
     "low": "LO",
